--- a/main.html
+++ b/main.html
@@ -1,25 +1,22 @@
-<!DOCTYPE html>
 <html>
 <head>
-<style>
-#container {
-  margin: 20px;
-  padding: 10px;
-  border: 1px solid #000;
-}
+    <style>
+        #container {
+            margin: 20px;
+        }
 
-#container::before {
-  content: "Before";  /* Change to exactly what the test case expects */
-  color: #f00;
-  font-size: 20px;
-}
+        #container::before {
+            content: "Before";
+            color: #f00;
+            font-size: 20px;
+        }
 
-#container::after {
-  content: "After";   /* Change to exactly what the test case expects */
-  color: #f00;
-  font-size: 20px;
-}
-</style>
+        #container::after {
+            content: "After";
+            color: #f00;
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
 
